# ni-random

./: .gitignore  .izdeps.toml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES.md
benchmarks/: CMakeLists.txt  EngineBenchmarkSuite.hpp  chacha12_benchmark.cpp  chacha20_benchmark.cpp  chacha8_benchmark.cpp  pcg32_benchmark.cpp  pcg32_c64_benchmark.cpp  pcg32_c64_fast_benchmark.cpp  pcg32_c64_oneseq_benchmark.cpp  pcg32_fast_benchmark.cpp  pcg32_k64_benchmark.cpp  pcg32_k64_fast_benchmark.cpp  pcg32_k64_oneseq_benchmark.cpp  pcg32_oneseq_benchmark.cpp  pcg32_unique_benchmark.cpp  pcg64_benchmark.cpp  pcg64_c32_benchmark.cpp  pcg64_c32_fast_benchmark.cpp  pcg64_c32_oneseq_benchmark.cpp  pcg64_fast_benchmark.cpp  pcg64_k32_benchmark.cpp  pcg64_k32_fast_benchmark.cpp  pcg64_k32_oneseq_benchmark.cpp  pcg64_oneseq_benchmark.cpp  pcg64_unique_benchmark.cpp  philox4x32_benchmark.cpp  philox4x64_benchmark.cpp  sobol32_benchmark.cpp  sobol64_benchmark.cpp  splitmix64_benchmark.cpp  xoroshiro128p_benchmark.cpp  xoroshiro128pp_benchmark.cpp  xoroshiro128ss_benchmark.cpp  xoshiro128p_benchmark.cpp  xoshiro128pp_benchmark.cpp  xoshiro128ss_benchmark.cpp  xoshiro256p_benchmark.cpp  xoshiro256pp_benchmark.cpp  xoshiro256ss_benchmark.cpp
build_scripts/: ci.py
cmake/: ni-random-config.cmake.in
include/ni/random/: ApproxNormalDistribution.hpp  ChaCha.hpp  NormalDistribution.hpp  Pcg32.hpp  Pcg32C64.hpp  Pcg32C64Fast.hpp  Pcg32C64OneSeq.hpp  Pcg32Fast.hpp  Pcg32K64.hpp  Pcg32K64Fast.hpp  Pcg32K64OneSeq.hpp  Pcg32OneSeq.hpp  Pcg32Unique.hpp  Pcg64.hpp  Pcg64C32.hpp  Pcg64C32Fast.hpp  Pcg64C32OneSeq.hpp  Pcg64Fast.hpp  Pcg64K32.hpp  Pcg64K32Fast.hpp  Pcg64K32OneSeq.hpp  Pcg64OneSeq.hpp  Pcg64Unique.hpp  Philox4x32.hpp  Philox4x64.hpp  RandomNumberDistribution.hpp  RandomNumberEngine.hpp  SeedPod.hpp  SeedSeqFE.hpp  SeedSeqFrom.hpp  SeedSequence.hpp  SimpleUniformIntDistribution.hpp  SimpleUniformRealDistribution.hpp  Sobol32.hpp  Sobol64.hpp  SplitMix64.hpp  UniformIntDistribution.hpp  UniformRealDistribution.hpp  Xoroshiro128Plus.hpp  Xoroshiro128PlusPlus.hpp  (+7 more)
include/ni/random/detail/: ChaChaBlock.hpp  ChaChaEngine.hpp  PcgEngine.hpp  PcgExtras.hpp  PcgUint128.hpp  PhiloxEngine.hpp  PhiloxMath.hpp  SobolDirectionNumbers.hpp  SobolEngine.hpp  UtlDistributionMath.hpp  XoshiroDetail.hpp
izo_build/: ni-random.gyp  ni-random_sources.gypi
test/: CMakeLists.txt  DistributionConformanceSuite.hpp  DistributionConformanceTraits.hpp  EngineConformanceSuite.hpp  EngineConformanceTraits.hpp  approx_normal_distribution_tests.cpp  chacha12_scalar_tests.cpp  chacha12_tests.cpp  chacha20_tests.cpp  chacha8_scalar_tests.cpp  chacha8_tests.cpp  chacha_scalar_tests.cpp  chacha_simd_equivalence_tests.cpp  chacha_substream_tests.cpp  distribution_concept_tests.cpp  minstd_rand_tests.cpp  normal_distribution_tests.cpp  pcg32_c64_fast_tests.cpp  pcg32_c64_oneseq_tests.cpp  pcg32_c64_tests.cpp  pcg32_fast_tests.cpp  pcg32_k64_fast_tests.cpp  pcg32_k64_oneseq_tests.cpp  pcg32_k64_tests.cpp  pcg32_oneseq_tests.cpp  pcg32_tests.cpp  pcg64_c32_fast_tests.cpp  pcg64_c32_oneseq_tests.cpp  pcg64_c32_tests.cpp  pcg64_emulated128_tests.cpp  pcg64_fast_tests.cpp  pcg64_k32_fast_tests.cpp  pcg64_k32_oneseq_tests.cpp  pcg64_k32_tests.cpp  pcg64_oneseq_tests.cpp  pcg64_tests.cpp  pcg_unique_tests.cpp  philox4x32_tests.cpp  philox4x64_tests.cpp  philox_reference_tests.cpp  (+22 more)
